@@ -1,1 +1,1 @@
-1.3.0rc1
+1.3.0rc2
