@@ -1,4 +1,4 @@
-# $Id: mk_modules,v 1.3 2008/04/02 10:12:49 tho Exp $
+# $Id: mk_modules,v 1.4 2008/06/23 16:27:35 tho Exp $
 
 #
 # --no_hmap
@@ -89,4 +89,17 @@ makl_args_def   \
 __makl_no_list () 
 { 
     makl_set_var "NO_LIST" ; 
+}
+
+#
+# --no_array
+#
+makl_args_def   \
+    "no_array"  \
+    "" ""       \
+    "disable array module"
+
+__makl_no_array () 
+{ 
+    makl_set_var "NO_ARRAY" ; 
 }
