@@ -7,6 +7,8 @@ SRCS = main.c
 SRCS += misc.c 
 SRCS += hmap.c 
 SRCS += list.c 
+SRCS += string.c 
+SRCS += array.c 
 
 CFLAGS += -I../include
 CFLAGS += -g -DDEBUG
