@@ -9,36 +9,6 @@
 #include <signal.h>
 #include <u/libu.h>
 
-static int test_u_str(void)
-{
-    u_string_t *s = NULL;
-
-    con_err_if(u_string_create("0", 1, &s));
-
-    con_err_if(strcmp(u_string_c(s), "0"));
-
-    con_err_if(u_string_sprintf(s, "%s", "1"));
-    con_err_if(strcmp(u_string_c(s), "1"));
-
-    con_err_if(u_string_aprintf(s, "%s", "23"));
-    con_err_if(strcmp(u_string_c(s), "123"));
-
-    con_err_if(u_string_cat(s, "45"));
-    con_err_if(strcmp(u_string_c(s), "12345"));
-
-    con_err_if(u_string_ncat(s, "6777", 2));
-    con_err_if(strcmp(u_string_c(s), "1234567"));
-
-    con_err_if(u_string_sprintf(s, "reset"));
-    con_err_if(strcmp(u_string_c(s), "reset"));
-
-    u_string_free(s);
-
-    return 0;
-err:
-    return ~0;
-}
-
 static int test_list_ins (void)
 {
     enum { ITERS = 3 };
@@ -95,6 +65,3 @@ U_TEST_MODULE( list )
 
     return 0;                                                
 }
-
-
-
