@@ -1,8 +1,9 @@
-$Id: ChangeLog,v 1.43 2008/06/21 11:21:18 tat Exp $
+$Id: ChangeLog,v 1.44 2008/06/23 16:27:35 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU x.y.z:
+	- [array] added dynamic array module
 	- [list] u_list_insert and u_list_del_n added
 	- [config] u_config_print_to_fp added
 	- [configure] netinet/{tcp,in}.h and sys/socket.h tests
